--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -212,6 +212,7 @@ i {
     display: inline-block;
 }
 
+
 /* 业务模式 */
 .business {
     width: 100%;
@@ -354,6 +355,8 @@ i {
 /* 新闻资讯*/
 .news {
     width: 100%;
+    padding-bottom: 80px;
+    /* background: blanchedalmond; */
 }
 
 .news .container {
@@ -384,16 +387,28 @@ i {
     position: relative;
     float: left;
     width: 303px;
+    /* height: 310px; */
     margin: 0 15px 0 15px;
     border: 1px solid #e6e6e6;
 }
 
+.news .content .banner .wrap li:hover img {
+    transform: scale(1.5);
+}
+
+.news .content .banner .wrap li .img-box {
+    width: 303px;
+    height: 227.25px;
+    overflow: hidden;
+}
+
 .news .content .banner .wrap li img {
     width: 303px;
+    transition: all 1s;
 }
 
 .news .content .banner .wrap p {
-    padding: 12px 15px 0 10px;
+    padding: 5px 15px 0 10px;
 }
 
 .news .content .banner .wrap .title {
@@ -426,6 +441,7 @@ i {
     height: 10px;
     border-radius: 50%;
     background: blanchedalmond;
+    cursor: pointer;
 }
 
 .news .content .dots .active {
@@ -433,12 +449,44 @@ i {
 
 }
 
+/* 地图 */
+.map-parent {
+    width: 100%;
+    padding-bottom: 80px;
+    /* background: #fafafa; */
+}
+
+.map-parent .title {
+    width: 980px;
+    margin: 0 auto;
+    padding: 30px 0;
+    text-align: center;
+    font-size: 32px;
+}
+
+.map-parent .map {
+    width: 1100px;
+    height: 500px;
+    margin: 0 auto;
+}
+
+.map-parent .map-title {
+    font-size: 14px;
+    color: #D2A26B;
+}
+
+.map-parent .map-content {
+    font-size: 13px;
+    color: #333;
+    margin-top: 6px;
+    line-height: 22px;
+}
+
 /* 最底部 */
 .footer {
     width: 100%;
     background: #29292a;
     position: relative;
-    margin-top: 80px;
 }
 
 .footer .content {
@@ -453,6 +501,10 @@ i {
 
 .footer .content ul li {
     flex: 1.5;
+}
+
+.footer .content ul li dd a {
+    color: #fff;
 }
 
 .footer .content ul .first {
@@ -540,7 +592,7 @@ i {
 /* 返回顶部 */
 .back-top {
     position: fixed;
-    right: 40px;
+    right: 25px;
     bottom: 40px;
     z-index: 1000;
     width: 55px;
@@ -566,4 +618,23 @@ i {
 .back-top .font {
     display: none;
     font-size: 12px;
+}
+
+/* 联系客服 */
+.sv {
+    position: fixed;
+    top: 180px;
+    right: 0;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 14px;
+    color: #fff;
+    background: #D2A26B;
+    display: none;
+}
+
+.sv a {
+    color: #fff;
 }
