--- a/css/index.css
+++ b/css/index.css
@@ -154,12 +154,12 @@ a {
 }
 
 .wrap .banner .first {
-    background: url(../img/index_slices/banner@2x.png) no-repeat 100% 100%;
+    background: url(../img/index_slices/banner@2xcy.png) no-repeat 100% 100%;
     background-size: 100% 100%;
 }
 
 .wrap .banner .end {
-    background: url(../img/index_slices/index_banner.png) no-repeat 100% 100%;
+    background: url(../img/index_slices/index_bannercy.png) no-repeat 100% 100%;
     background-size: 100% 100%;
 }
 
@@ -237,6 +237,66 @@ a {
     line-height: 30px;
 }
 
+/* 业务服务 */
+.service {
+    width: 100%;
+    background: #FAFAFA;
+    padding-bottom: 80px;
+}
+
+.service .content .title {
+    width: 67%;
+    margin: 0 auto;
+    /* background: blanchedalmond; */
+    padding: 100px 0 80px;
+    font-size: 34px;
+    text-align: center;
+}
+
+.service .content .hot ul {
+    display: flex;
+    width: 67%;
+    margin: 0 auto;
+    justify-content: space-around;
+}
+
+.service .content .hot ul li {
+    width: 280px;
+    height: 220px;
+    padding: 20px;
+    text-align: center;
+    background: #fff;
+    cursor: pointer;
+}
+
+.service .content .hot ul li:hover {
+    box-shadow: 0 0 6px rgba(210, 162, 107, 0.1);
+}
+
+.service .content .hot ul li .tu {
+    width: 44px;
+    height: 44px;
+    margin: 20px auto 0 auto;
+}
+
+.service .content .hot ul li .tu img {
+    width: 100%;
+}
+
+.service .content .hot ul li h5 {
+    padding: 15px 0;
+    color: #212121;
+}
+
+.service .content .hot ul li p {
+    text-align: left;
+    color: #666;
+}
+
+.service .content .hot ul li .font-color {
+    color: #ccc;
+}
+
 /* 合作单位 */
 .units {
     width: 100%;
@@ -248,28 +308,32 @@ a {
 
 .units .content .title {
     text-align: center;
-    padding: 0 0 80px;
+    padding: 80px 0;
     font-size: 34px;
 }
-.units .content .hot ul{
+
+.units .content .hot ul {
     display: flex;
-    height: 480px;
+    height: 320px;
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
 .units .content .hot li {
     width: 200px;
     height: 100px;
-    box-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+    box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.1);
 }
-.units .content .hot li img{
+
+.units .content .hot li img {
     width: 100%;
 }
+
 /* 动态数据展示 */
 .state-number {
     width: 100%;
     height: 240px;
-    background: #f4f4f4;
+    background: #FAFAFA;
     /* background: url(../image/bg2x.webp) no-repeat 100% 100%; */
     /* background-size: 100% 100%; */
 }
@@ -331,6 +395,17 @@ a {
     font-size: 20px;
 }
 
+.contact-us .shade-parent {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    display: none;
+    background: rgba(0, 0, 0, .5);
+    z-index: 10086;
+}
+
 .contact-us .popup {
     width: 42%;
     height: 80%;
@@ -341,7 +416,6 @@ a {
     background: #fff;
     z-index: 200;
     overflow-y: overlay;
-    display: none;
     max-height: 740px;
 }
 
@@ -381,6 +455,10 @@ a {
     color: #212221;
     font-weight: 300;
     margin-bottom: 20px;
+}
+
+.contact-us .popup .form .form-item-label .consult {
+    padding-right: 21px;
 }
 
 .contact-us .popup .form .form-item-label span {
@@ -449,6 +527,13 @@ a {
     border-top: 1px solid #dcdcdc;
 }
 
+#signupForm label.error {
+    display: inline-block;
+    padding-left: 105px;
+    color: red;
+    font-size: 14px;
+}
+
 /* 最底部 */
 .footer {
     width: 100%;
@@ -468,6 +553,10 @@ a {
 
 .footer .content ul li {
     flex: 1.5;
+}
+
+.footer .content ul li dd a {
+    color: #fff;
 }
 
 .footer .content ul .first {
@@ -555,7 +644,7 @@ a {
 /* 返回顶部 */
 .back-top {
     position: fixed;
-    right: 40px;
+    right: 25px;
     bottom: 40px;
     z-index: 1000;
     width: 55px;
@@ -581,4 +670,23 @@ a {
 .back-top .font {
     display: none;
     font-size: 12px;
+}
+
+/* 联系客服 */
+.sv {
+    position: fixed;
+    top: 180px;
+    right: 0;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 14px;
+    color: #fff;
+    background: #D2A26B;
+    display: none;
+}
+
+.sv a {
+    color: #fff;
 }
