--- a/css/jiejue.css
+++ b/css/jiejue.css
@@ -249,15 +249,19 @@ a {
     height: 272px;
     padding: 0 15px;
 }
-
+.advantage .content .hot li:hover img{
+    transform: scale(1.2);
+}
 .advantage .content .hot .tu {
     margin: 0 auto;
     width: 140px;
     height: 140px;
+    /* overflow: hidden; */
 }
 
 .advantage .content .hot .tu img {
     width: 100%;
+    transition: all 0.5s;
 }
 
 .advantage .content .hot p {
@@ -495,6 +499,17 @@ a {
     font-size: 20px;
 }
 
+.contact-us .shade-parent {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    display: none;
+    background: rgba(0, 0, 0, .5);
+    z-index: 10086;
+}
+
 .contact-us .popup {
     width: 42%;
     height: 80%;
@@ -505,7 +520,6 @@ a {
     background: #fff;
     z-index: 200;
     overflow-y: overlay;
-    display: none;
     max-height: 740px;
 }
 
@@ -547,6 +561,10 @@ a {
     margin-bottom: 20px;
 }
 
+.contact-us .popup .form .form-item-label .consult {
+    padding-right: 21px;
+}
+
 .contact-us .popup .form .form-item-label span {
     color: red;
     font-size: 12px;
@@ -557,7 +575,7 @@ a {
     width: 70%;
     height: 50px;
     border: 1px solid #dcdcdc;
-    padding: 20px;
+    padding-left: 20px;
     outline: none;
 }
 
@@ -613,6 +631,14 @@ a {
     border-top: 1px solid #dcdcdc;
 }
 
+#signupForm label.error {
+    display: inline-block;
+    padding-left: 105px;
+    color: red;
+    font-size: 14px;
+}
+
+
 /* 最底部 */
 .footer {
     width: 100%;
@@ -632,6 +658,10 @@ a {
 
 .footer .content ul li {
     flex: 1.5;
+}
+
+.footer .content ul li dd a {
+    color: #fff;
 }
 
 .footer .content ul .first {
@@ -719,7 +749,7 @@ a {
 /* 返回顶部 */
 .back-top {
     position: fixed;
-    right: 40px;
+    right: 25px;
     bottom: 40px;
     z-index: 1000;
     width: 55px;
@@ -745,4 +775,23 @@ a {
 .back-top .font {
     display: none;
     font-size: 12px;
+}
+
+/* 联系客服 */
+.sv {
+    position: fixed;
+    top: 180px;
+    right: 0;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 14px;
+    color: #fff;
+    background: #D2A26B;
+    display: none;
+}
+
+.sv a {
+    color: #fff;
 }
