--- a/css/product.css
+++ b/css/product.css
@@ -191,10 +191,12 @@ a {
 }
 
 .advantage .content .hot li:hover .wrap {
-    box-shadow: 0px 0px 6px rgb(0 0 0 / 10%) inset;
-    border: 1px solid rgba(255, 255, 255, 0);
+    border: 1px solid rgb(225,192,155,0.8);
+    border-radius: 10px;
 }
-
+.advantage .content .hot li:hover img{
+    transform: scale(1.5);
+}
 .advantage .content .hot .wrap-top {
     margin-top: 20px;
 }
@@ -222,6 +224,7 @@ a {
 
 .advantage .content .hot .tu img {
     width: 100%;
+    transition: all 0.5s;
 }
 
 .advantage .content .hot p {
@@ -251,7 +254,7 @@ a {
 /* 权益类产品 */
 .equities {
     width: 100%;
-    background: #f4f4f4;
+    background: #FAFAFA;
     overflow: hidden;
 }
 
@@ -265,7 +268,6 @@ a {
     background: #fff;
     border: 1px solid rgba(255, 255, 255, 0) !important;
 }
-
 .equities .content .hot li {
     float: left;
     height: 300px;
@@ -275,7 +277,10 @@ a {
     cursor: pointer;
     margin-bottom: 80px;
 }
-
+.equities .content .hot li:hover .wrap{
+    border: 1px solid rgb(225,192,155,0.8) !important;
+    border-radius: 10px;
+}
 @media (max-width:1200px) {
     .equities .content .hot li {
         width: 33.3333%;
@@ -307,6 +312,10 @@ a {
 
 .footer .content ul li {
     flex: 1.5;
+}
+
+.footer .content ul li dd a {
+    color: #fff;
 }
 
 .footer .content ul .first {
@@ -394,7 +403,7 @@ a {
 /* 返回顶部 */
 .back-top {
     position: fixed;
-    right: 40px;
+    right: 25px;
     bottom: 40px;
     z-index: 1000;
     width: 55px;
@@ -420,4 +429,23 @@ a {
 .back-top .font {
     display: none;
     font-size: 12px;
+}
+
+/* 联系客服 */
+.sv {
+    position: fixed;
+    top: 180px;
+    right: 0;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 14px;
+    color: #fff;
+    background: #D2A26B;
+    display: none;
+}
+
+.sv a {
+    color: #fff;
 }
