--- a/css/rencai.css
+++ b/css/rencai.css
@@ -169,7 +169,7 @@ i {
     padding-left: 8px;
 }
 
-.direction {
+.position-direction{
     font-size: 12px !important;
 }
 
@@ -237,15 +237,11 @@ i {
     height: 109px;
     padding: 0 20px;
     background: #FFF;
-    box-shadow: 0 6px 18px 0 rgb(0 0 0 / 14%)
+    /* box-shadow: 0 6px 18px 0 rgb(0 0 0 / 14%) */
 }
 
 .open-position .content .hot .red-text {
     color: #F6572B;
-}
-
-.open-position .content .hot .ul-li:hover {
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .open-position .content .hot .ul-li:nth-child(2) {
@@ -258,7 +254,7 @@ i {
 
 .open-position .content .hot .shang {
     position: relative;
-    margin: 10px 0;
+    margin: 10px 0 30px 0;
 }
 
 @media (max-width:1200px) {
@@ -302,16 +298,16 @@ i {
 
 .open-position .content .hot .ul-li .msg {
     position: absolute;
-    width: 550px;
-    top: 97px;
+    /* width: 304px; */
+    top: 109px;
     left: 0;
     color: #6A6A6A;
     font-size: 12px;
     z-index: 100;
-    padding: 20px;
+    padding: 10px 20px;
     line-height: 24px;
     background: #fff;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 5px 0 rgba(0, 0, 0, 0.3); */
     display: none;
 }
 
@@ -327,6 +323,7 @@ i {
 
 .open-position .content .hot .ul-li .msg li {
     list-style: decimal;
+    line-height: 20px;
 }
 
 /* 最底部 */
@@ -348,6 +345,10 @@ i {
 
 .footer .content ul li {
     flex: 1.5;
+}
+
+.footer .content ul li dd a {
+    color: #fff;
 }
 
 .footer .content ul .first {
@@ -435,7 +436,7 @@ i {
 /* 返回顶部 */
 .back-top {
     position: fixed;
-    right: 40px;
+    right: 25px;
     bottom: 40px;
     z-index: 1000;
     width: 55px;
@@ -461,4 +462,23 @@ i {
 .back-top .font {
     display: none;
     font-size: 12px;
+}
+
+/* 联系客服 */
+.sv {
+    position: fixed;
+    top: 180px;
+    right: 0;
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 14px;
+    color: #fff;
+    background: #D2A26B;
+    display: none;
+}
+
+.sv a {
+    color: #fff;
 }
